# TP_grupal_taller_G26

./: .gdb_history  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  box2d_demo  box2d_demo.cpp  index.html  install.sh  main.cpp  run_game.sh  taller_game  uninstall.sh
client/: CMakeLists.txt  CarStats.h  camera.cpp  car_sound_engine.cpp  car_sound_engine.h  checkpoint_arrow.cpp  checkpoint_arrow.h  client_game.cpp  client_game.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  collision_explosion.cpp  collision_explosion.h  hints.cpp  hints.h  hud.cpp  hud.h  main.cpp  mainwindow.cpp  mainwindow.ui  minimap.cpp  minimap.h  npc_routes.h  npc_system.h  parser.cpp  parser.h  session.cpp  session.h  track_loader.cpp  track_loader.h
client/UI/: hostwindow.cpp  hostwindow.h  hostwindow.ui  initialwindow.cpp  initialwindow.h  initialwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  readywindow.cpp  readywindow.h  readywindow.ui  resources.qrc  trackwindow.cpp  trackwindow.h  trackwindow.ui  ui_hostwindow.h  ui_initialwindow.h  ui_mainwindow.h  ui_readywindow.h  ui_trackwindow.h
client/audio/: CMakeLists.txt  car_sound_engine.cpp  car_sound_engine.h
client/cmd/: CMakeLists.txt  client_to_server_applyUpgrades.cpp  client_to_server_applyUpgrades.h  client_to_server_applyUpgrades_client.cpp  client_to_server_applyUpgrades_client.h  client_to_server_cheat.cpp  client_to_server_cheat.h  client_to_server_cheat_client.cpp  client_to_server_cheat_client.h  client_to_server_finishRace.cpp  client_to_server_finishRace.h  client_to_server_joinLobby_client.cpp  client_to_server_joinLobby_client.h  client_to_server_lobby.cpp  client_to_server_lobby.h  client_to_server_move.cpp  client_to_server_move.h  client_to_server_move_client.cpp  client_to_server_move_client.h  client_to_server_readyToStart.cpp  client_to_server_readyToStart.h  client_to_server_readyToStart_client.cpp  client_to_server_readyToStart_client.h  client_to_server_tour.cpp  client_to_server_tour.h  client_to_server_tour_client.cpp  client_to_server_tour_client.h  cmd_base_client.cpp  cmd_base_client.h  cmd_client_register.cpp  cmd_client_register.h  server_to_client_accumulatedResults.cpp  server_to_client_accumulatedResults.h  server_to_client_accumulatedResults_client.cpp  server_to_client_accumulatedResults_client.h  server_to_client_assign_id.cpp  server_to_client_assign_id.h  server_to_client_assign_id_client.cpp  server_to_client_assign_id_client.h  server_to_client_gameStarting.cpp  (+19 more)
client/graphics/: CMakeLists.txt  camera.cpp  camera.h  car_fire_effect.cpp  car_fire_effect.h  checkpoint_arrow.cpp  checkpoint_arrow.h  collision_explosion.cpp  collision_explosion.h  hud.cpp  hud.h  minimap.cpp  minimap.h  track_loader.cpp  track_loader.h
server/: CMakeLists.txt  Car.cpp  Car.h  CheckpointManager.cpp  CheckpointManager.h  City.cpp  Collidable.h  CollisionCategories.h  LobbiesMonitor.cpp  LobbiesMonitor.h  Lobby.h  LobbyStatus.h  PhysicsEngine.cpp  PhysicsEngine.h  Player.cpp  Player.h  SensorData.h  StaticObject.cpp  StaticObject.h  Track.cpp  Track.h  WorldContactListener.cpp  WorldContactListener.h  acceptor.cpp  acceptor.h  bridge_sensor_manager.cpp  bridge_sensor_manager.h  car.cpp  car.h  checkpoint_manager.cpp  checkpoint_manager.h  client_handler.cpp  client_handler.h  collidable.h  gameLoopContext.h  gameloop.cpp  gameloop.h  main.cpp  physical_checkpoint.h  physics_config.h  (+17 more)
server/cmd/: CMakeLists.txt  client_to_server_applyUpgrades.cpp  client_to_server_applyUpgrades.h  client_to_server_applyUpgrades_server.cpp  client_to_server_applyUpgrades_server.h  client_to_server_cheat.cpp  client_to_server_cheat.h  client_to_server_cheat_server.cpp  client_to_server_cheat_server.h  client_to_server_finishRace.cpp  client_to_server_finishRace.h  client_to_server_joinLobby.cpp  client_to_server_joinLobby.h  client_to_server_joinLobby_server.cpp  client_to_server_joinLobby_server.h  client_to_server_move.cpp  client_to_server_move.h  client_to_server_move_server.cpp  client_to_server_move_server.h  client_to_server_readyToStart.cpp  client_to_server_readyToStart.h  client_to_server_readyToStart_server.cpp  client_to_server_readyToStart_server.h  client_to_server_tour.cpp  client_to_server_tour.h  client_to_server_tour_server.cpp  client_to_server_tour_server.h  cmd_base_server.cpp  cmd_base_server.h  cmd_server_register.cpp  cmd_server_register.h  server_to_client_accumulatedResults.cpp  server_to_client_accumulatedResults.h  server_to_client_accumulatedResults_server.cpp  server_to_client_accumulatedResults_server.h  server_to_client_assign_id.cpp  server_to_client_assign_id.h  server_to_client_assign_id_server.cpp  server_to_client_assign_id_server.h  server_to_client_gameStarting.cpp  (+19 more)
server/game/: physics.cpp  physics.h
server/game_logic/: BridgeSensorManager.cpp  BridgeSensorManager.h  CMakeLists.txt  Car.cpp  Car.h  CarUpgrades.h  CheckpointManager.cpp  CheckpointManager.h  City.cpp  City.h  Collidable.h  CollisionCategories.h  CollisionInfo.h  IntersectionManager.cpp  Race.h  (+21 more)
tests/: CMakeLists.txt  test_accumulatedResults_deserialization.cpp  test_accumulatedResults_serialization.cpp  test_applyUpgrades_deserialization.cpp  test_applyUpgrades_serialization.cpp  test_assign_id_serialization.cpp  test_assing_id_deserialization.cpp  test_cheat_deserialization.cpp  test_cheat_serialization.cpp  test_lobbyResponse_deserialization.cpp  test_lobbyResponse_serialization.cpp  test_lobby_deserialization.cpp  test_lobby_serialization.cpp  test_move_deserialization.cpp  test_move_serialization.cpp  test_raceResults_deserialization.cpp  test_raceResults_serialization.cpp  test_readyToStart_deserialization.cpp  test_readyToStart_serialization.cpp  test_snapshot_deserialization.cpp  test_snapshot_serialization.cpp  test_startingRace_deserialization.cpp  test_startingRace_serialization.cpp  test_tour_deserialization.cpp  test_tour_serialization.cpp  testable_client_to_server.h  testable_server_to_client.h  testable_server_to_client_accumulatedResults.h  valgrind_suppressions.txt
(+185 files in other folders)
